# claude-code

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  TEMPLATE_USAGE.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude copy/: settings.local.json
.claude copy/logs/: stop_20250710_135718.json  stop_20250711_134706.json  stop_20250711_150931.json  stop_20250712_062810.json  stop_20250712_091318.json  stop_20250715_080025.json  stop_20250717_171949.json  stop_20250718_053102.json
.claude copy/logs/summaries/: session_summary_20250710_123956.json  session_summary_20250710_124151.json  session_summary_20250710_125740.json  session_summary_20250710_130103.json  session_summary_20250710_130244.json  session_summary_20250710_130507.json  session_summary_20250710_130539.json  session_summary_20250710_130615.json  session_summary_20250710_130645.json  session_summary_20250710_130758.json  session_summary_20250710_131000.json  session_summary_20250710_131059.json  session_summary_20250710_131716.json  session_summary_20250710_131928.json  session_summary_20250710_132010.json  session_summary_20250710_132153.json  session_summary_20250710_132503.json  session_summary_20250710_133707.json  session_summary_20250710_134010.json  session_summary_20250710_135250.json  session_summary_20250710_135349.json  session_summary_20250710_135523.json  session_summary_20250710_135718.json  session_summary_20250710_140225.json  session_summary_20250710_144251.json  session_summary_20250710_150515.json  session_summary_20250710_150604.json  session_summary_20250710_151003.json  session_summary_20250710_152622.json  session_summary_20250710_153031.json  session_summary_20250710_154857.json  session_summary_20250710_155550.json  session_summary_20250710_155807.json  session_summary_20250710_163355.json  session_summary_20250710_164244.json  session_summary_20250711_035452.json  session_summary_20250711_084835.json  session_summary_20250711_085051.json  session_summary_20250711_085501.json  session_summary_20250711_091942.json  (+199 more)
.claude copy/logs/transcripts/: a5ec00eb-0c46-4cab-9fb6-acb3b5358237.jsonl  f9649ca1-b585-40db-8c66-67956bac858a.jsonl
.claude/hooks/: post_tool_use.py  pre_tool_use.py  stop.py  stop.py.new  yaml_validator.py
.claude/hooks/javascript/: post_tool_use.js  pre_tool_use.js
.claude/hooks/php/: post_tool_use.php  pre_tool_use.php
.claude/hooks/typescript/: post_tool_use.ts  pre_tool_use.ts
.github/workflows/: ci.yml
scripts/: init_project.py  qa_check.sh
tests/: conftest.py
